--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="icon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="icon-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="icon-512x512.png" sizes="512x512" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/src/style.css" rel="stylesheet">
   <title>ABS Toolbox</title>
