--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="icon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="icon-192x192.png" sizes="192x192" />
+    <link rel="icon" type="image/png" href="icon-512x512.png" sizes="512x512" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/style.css" rel="stylesheet" />
+    <title>ABS Toolbox</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="icon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="icon-192x192.png" sizes="192x192" />
-  <link rel="icon" type="image/png" href="icon-512x512.png" sizes="512x512" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/src/style.css" rel="stylesheet">
-  <title>ABS Toolbox</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
